# audio-cutline

./: .gitignore  AGENTS.md  AGENTS_todo.md  CMakeLists.txt  DECISIONS.md  LICENSE  README.md  SPEC.md  THIRD_PARTY_NOTICES  mise.toml
.github/workflows/: ci.yml
Source/: Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: Butterworth.h  CutlineEngine.h
Source/State/: StatePersistence.cpp  StatePersistence.h
Tests/: DspBenchmark.cpp  DspTests.cpp  ProcessorTests.cpp  StateTests.cpp
